# OS_Info

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: BuildSDL.cmake
include/: DebugInfo.hpp  sdlInfo.hpp
src/: CMakeLists.txt  DebugInfo.cpp  DebugInfoLinux.cpp  DebugInfoWindows.cpp  DebugInfoWindows.cpp~RF2388c62.TMP  DebugInfoWindows.cpp~RF23fba35.TMP  DebugInfoWindows.cpp~RF24271c1.TMP  glibcInfo.cpp  sdlInfo.cpp
src/linux/: distroInfo.cpp  glibcInfo.cpp  hardwareInfo.cpp  kernelInfo.cpp  sdlInfo.cpp
src/windows/: systemInfo.cpp
test/: CMakeLists.txt  CpuTest.cpp  DistroTest.cpp  KernelTest.cpp  MemTest.cpp  OpenGLVersionTest.cpp  SDL2Test.cpp  libcTest.cpp  memtest.cpp  testutility.hpp
